LSP-387: Replicate the language level detection logic from MavenImportUtil
GitOrigin-RevId: 3a157b585e9b45064dde004f36e1362e7302fd7f