@@ -472,12 +472,126 @@ private fun getAttachedJarsLibName(artifact: org.apache.maven.model.Dependency):
 }
 
 private fun getLanguageLevels(project: MavenProject): LanguageLevels {
-    return LanguageLevels(
-        getSourceLanguageLevel(project),
-        getTestSourceLanguageLevel(project),
-        getTargetLanguageLevel(project),
-        getTestTargetLanguageLevel(project)
-    )
+    // Replicate the IDEA Maven importer behavior from MavenImportUtil and MavenProjectImportContextProvider
+    val setUpSourceLevel = getSourceLanguageLevel(project)
+    val setUpTestSourceLevel = getTestSourceLanguageLevel(project)
+    val setUpTargetLevel = getTargetLanguageLevel(project)
+    val setUpTestTargetLevel = getTestTargetLanguageLevel(project)
+
+    val sourceLevel = getLanguageLevel(project) { setUpSourceLevel }
+    val testSourceLevel = getLanguageLevel(project) { setUpTestSourceLevel }
+    val targetLevel = getLanguageLevel(project) { setUpTargetLevel }
+    val testTargetLevel = getLanguageLevel(project) { setUpTestTargetLevel }
+
+    return LanguageLevels(sourceLevel, testSourceLevel, targetLevel, testTargetLevel)
+}
+
+private fun getLanguageLevel(mavenProject: MavenProject, supplier: () -> String?): String {
+    var level: String? = null
+
+    val cfg = getPluginGoalConfiguration(mavenProject, "com.googlecode", "maven-idea-plugin", "idea")
+    if (cfg != null) {
+        level = cfg.getChild("jdkLevel")?.value?.trim()
+        if (level != null) {
+            level = when (level) {
+                "JDK_1_3" -> "1.3"
+                "JDK_1_4" -> "1.4"
+                "JDK_1_5" -> "1.5"
+                "JDK_1_6" -> "1.6"
+                "JDK_1_7" -> "1.7"
+                else -> level
+            }
+        }
+    }
+
+    if (level == null) {
+        level = supplier()
+    }
+
+    if (level == null) {
+        level = getDefaultLevel(mavenProject)
+    }
+
+    val feature = parseJavaFeatureNumber(level)
+    if (feature != null && feature >= 11) {
+        level = adjustPreviewLanguageLevel(mavenProject, level)
+    }
+
+    return level
+}
+
+private fun getDefaultLevel(mavenProject: MavenProject): String {
+    val plugin = mavenProject.buildPlugins.find { it.groupId == "org.apache.maven.plugins" && it.artifactId == "maven-compiler-plugin" }
+    if (plugin != null && plugin.version != null) {
+        if (compareVersions("3.11.0", plugin.version) <= 0) {
+            return "1.8"
+        }
+        if (compareVersions("3.9.0", plugin.version) <= 0) {
+            return "1.7"
+        }
+        if (compareVersions("3.8.0", plugin.version) <= 0) {
+            return "1.6"
+        }
+    }
+    return "1.5"
+}
+
+private fun compareVersions(v1: String, v2: String): Int {
+    val components1 = v1.split('.').mapNotNull { it.toIntOrNull() }
+    val components2 = v2.split('.').mapNotNull { it.toIntOrNull() }
+    for (i in 0 until maxOf(components1.size, components2.size)) {
+        val c1 = components1.getOrElse(i) { 0 }
+        val c2 = components2.getOrElse(i) { 0 }
+        if (c1 != c2) return c1.compareTo(c2)
+    }
+    return 0
+}
+
+private fun adjustPreviewLanguageLevel(mavenProject: MavenProject, level: String): String {
+    val enablePreviewProperty = mavenProject.properties.getProperty("maven.compiler.enablePreview")
+    if (enablePreviewProperty.toBoolean()) {
+        return "$level-preview"
+    }
+
+    val compilerPlugin = mavenProject.buildPlugins.find { it.groupId == "org.apache.maven.plugins" && it.artifactId == "maven-compiler-plugin" }
+    val compilerConfiguration = compilerPlugin?.configuration as? Xpp3Dom
+    if (compilerConfiguration != null) {
+        val enablePreviewParameter = compilerConfiguration.getChild("enablePreview")?.value?.trim()
+        if (enablePreviewParameter.toBoolean()) {
+            return "$level-preview"
+        }
+
+        val compilerArgs = compilerConfiguration.getChild("compilerArgs")
+        if (compilerArgs != null) {
+            if (isPreviewText(compilerArgs) ||
+                compilerArgs.children.any { isPreviewText(it) }
+            ) {
+                return "$level-preview"
+            }
+        }
+    }
+
+    return level
+}
+
+private fun isPreviewText(child: Xpp3Dom): Boolean {
+    return "--enable-preview" == child.value?.trim()
+}
+
+private fun parseJavaFeatureNumber(level: String?): Int? {
+    if (level.isNullOrBlank()) return null
+    val trimmed = level.trim()
+    // Accept common forms:
+    // - "1.8" / "1.7" etc
+    // - "8", "11", "17"
+    // - "17.0" / "17.0.1" (take the feature component)
+    val parts = trimmed.split('.', '-', '_')
+    if (parts.isEmpty()) return null
+    return if (parts[0] == "1" && parts.size >= 2) {
+        parts[1].toIntOrNull()
+    } else {
+        parts[0].toIntOrNull()
+    }
 }
 
 private fun getSourceLanguageLevel(project: MavenProject, executionId: String? = null): String? {
@@ -497,15 +611,48 @@ private fun getTestTargetLanguageLevel(project: MavenProject): String? {
 }
 
 private fun getCompilerProp(project: MavenProject, prop: String, executionId: String? = null): String? {
+    if ("release" == prop || isReleaseCompilerProp(project)) {
+        val release = doGetCompilerProp(project, "release", executionId)
+        if (release != null) return release
+    }
+    return doGetCompilerProp(project, prop, executionId)
+}
+
+private fun isReleaseCompilerProp(project: MavenProject): Boolean {
+    val plugin = project.buildPlugins.find { it.groupId == "org.apache.maven.plugins" && it.artifactId == "maven-compiler-plugin" }
+    val version = plugin?.version ?: return false
+    return compareVersions("3.6", version) >= 0
+}
+
+private fun doGetCompilerProp(project: MavenProject, prop: String, executionId: String? = null): String? {
     val plugin = project.buildPlugins.find { it.groupId == "org.apache.maven.plugins" && it.artifactId == "maven-compiler-plugin" }
         ?: return project.properties.getProperty("maven.compiler.$prop")
 
     if (executionId != null) {
         val execution = plugin.executions.find { it.id == executionId }
-        (execution?.configuration as? Xpp3Dom)?.getChild(prop)?.value?.let { return it }
+        val config = execution?.configuration as? Xpp3Dom
+        if (config != null) {
+            config.getChild(prop)?.value?.let { return it }
+            if (prop == "source" || prop == "target") {
+                config.getChild("compilerArgument")?.value?.let { arg ->
+                    if (arg.startsWith("-source ") && prop == "source") return arg.substring("-source ".length).trim()
+                    if (arg.startsWith("-target ") && prop == "target") return arg.substring("-target ".length).trim()
+                }
+            }
+        }
     }
 
-    (plugin.configuration as? Xpp3Dom)?.getChild(prop)?.value?.let { return it }
+    val pluginConfig = plugin.configuration as? Xpp3Dom
+    if (pluginConfig != null) {
+        pluginConfig.getChild(prop)?.value?.let { return it }
+        if (prop == "source" || prop == "target") {
+            pluginConfig.getChild("compilerArgument")?.value?.let { arg ->
+                if (arg.startsWith("-source ") && prop == "source") return arg.substring("-source ".length).trim()
+                if (arg.startsWith("-target ") && prop == "target") return arg.substring("-target ".length).trim()
+            }
+        }
+    }
+
     return project.properties.getProperty("maven.compiler.$prop")
 }
 
@@ -659,10 +806,18 @@ internal class MavenTreeModuleImportData(
     val javaSettings: JavaSettingsData
         get() {
             val level = moduleData.sourceLanguageLevel
+            val isPreview = level?.endsWith("-preview") == true
+            val rawLevel = level?.removeSuffix("-preview")
+            val feature = parseJavaFeatureNumber(rawLevel)
             val jdkLevel = when {
-                level == null -> null
-                level.length == 1 -> "JDK_1_$level"
-                else -> "JDK_${level.replace('.', '_')}"
+                feature == null -> null
+                feature <= 8 -> "JDK_1_$feature"
+                else -> "JDK_$feature"
+            }
+            val finalJdkLevel = if (isPreview) {
+                jdkLevel?.let { "${it}_PREVIEW" }
+            } else {
+                jdkLevel
             }
             return JavaSettingsData(
                 module = moduleData.moduleName,
@@ -670,7 +825,7 @@ internal class MavenTreeModuleImportData(
                 excludeOutput = false,
                 compilerOutput = null,
                 compilerOutputForTests = null,
-                languageLevelId = jdkLevel,
+                languageLevelId = finalJdkLevel,
                 manifestAttributes = emptyMap()
             )
         }
